unpackaged/objects/ServiceAppointment.object
<CustomObject>
  <fields>
    <fullName>AcceptReject__c</fullName>
    <description>Accept or Reject a Service Appointment</description>
    <label>Accept/Reject</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Accept</fullName>
        </value>
        <value>
          <fullName>Reject</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CancellationRejectionReason__c</fullName>
    <description>Indicate why service appointment got cancelled/rejected</description>
    <label>Cancellation/Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Comments__c</fullName>
    <description>Add comments by DS technician team</description>
    <label>Comments</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>TimeType__c</fullName>
    <description>Custom picklist value that will be used to indicate if the job  that's being performed within this service appointment is chargeable or not</description>
    <label>Time Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Chargeable</fullName>
        </value>
        <value>
          <fullName>Non Chargeable</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>WorkDone__c</fullName>
    <description>This field will be used by field technicians to write what's the work they completed/done at the customer site</description>
    <label>Describe What Has Been Done</label>
    <type>TextArea</type>
  </fields>
  <listViews>
    <fullName>All_ServiceAppointments</fullName>
    <filterScope>Everything</filterScope>
    <label>All Service Appointments</label>
  </listViews>
  <listViews>
    <fullName>My_ServiceAppointments</fullName>
    <filterScope>Mine</filterScope>
    <label>My Service Appointments</label>
  </listViews>
  <sharingModel>Private</sharingModel>
</CustomObject>